fix:alignment

--- a/my-app/src/styles/_cards.scss
+++ b/my-app/src/styles/_cards.scss
@@ -5,16 +5,21 @@ height: 20vh;
 
 
 }
+.card1:hover{
+  opacity: 0.5;
+  
+}
 
 .card1 > img {
   width: 30vw;
+  border-radius: 17px;
  
 
 }
 
 
 .maincar { 
-  border: 1px solid black;
+
   width: 20vw;
   height: 100vh;
 }
@@ -22,9 +27,31 @@ height: 20vh;
 
 .carAll{
 
-  border: 1px solid rgb(25, 190, 89);
+ 
+  padding-top: 5vh;
+  padding-left: 2vw;
   width: 100vw;
-  height: 150vh;
+  height: 160vh;
   display: flex;
   justify-content: center;
 }
+
+.projectName {
+display: flex;
+font-family: "Poppins";
+color: $whiteLetter;
+
+font-size: 1.7rem;
+justify-content: center;
+
+}
+
+.projectLink{
+  margin-left: 10vw;
+  font-family: "Poppins";
+  color: $whiteLetter;
+
+font-size: 1.3rem;
+ 
+}
+
