--- a/my-app/src/styles/_projects.scss
+++ b/my-app/src/styles/_projects.scss
@@ -1,10 +1,10 @@
 .pro {
 
 
-  border: 1px solid rgb(201, 20, 20);
+
   width: 30vw;
   height: 150vh;
-  gap: 30px;
+  gap: 35px;
   display: flex;
   flex-direction: column;
 margin-left: 10vw;
@@ -46,10 +46,11 @@ align-items: center;
 }
 
 .titleProject{
+  padding-top: 2vh;
   margin-left: 7vw;
   display: flex;
   justify-content: center;
-  height: 10vh;
+  height: 12vh;
   font-size: 6vh;
   font-family: "Poppins";
   color:$whiteLetter;
