--- a/my-app/src/styles/main.css
+++ b/my-app/src/styles/main.css
@@ -652,10 +652,9 @@ body {
 }
 /*media queries*/
 .pro {
-  border: 1px solid rgb(201, 20, 20);
   width: 30vw;
   height: 150vh;
-  gap: 30px;
+  gap: 35px;
   display: flex;
   flex-direction: column;
   margin-left: 10vw;
@@ -693,10 +692,11 @@ body {
 }
 
 .titleProject {
+  padding-top: 2vh;
   margin-left: 7vw;
   display: flex;
   justify-content: center;
-  height: 10vh;
+  height: 12vh;
   font-size: 6vh;
   font-family: "Poppins";
   color: #fff;
@@ -893,7 +893,8 @@ body {
 }
 
 .textC {
-  border: 1px solid rgb(224, 20, 20);
+  border: 1px solid rgb(37, 5, 5);
+  border-radius: 20px;
   line-height: 4rem;
   margin-left: 13vw;
   width: 60vw;
@@ -913,20 +914,40 @@ body {
   height: 20vh;
 }
 
+.card1:hover {
+  opacity: 0.5;
+}
+
 .card1 > img {
   width: 30vw;
+  border-radius: 17px;
 }
 
 .maincar {
-  border: 1px solid black;
   width: 20vw;
   height: 100vh;
 }
 
 .carAll {
-  border: 1px solid rgb(25, 190, 89);
+  padding-top: 5vh;
+  padding-left: 2vw;
   width: 100vw;
-  height: 150vh;
+  height: 160vh;
   display: flex;
   justify-content: center;
+}
+
+.projectName {
+  display: flex;
+  font-family: "Poppins";
+  color: #fff;
+  font-size: 1.7rem;
+  justify-content: center;
+}
+
+.projectLink {
+  margin-left: 10vw;
+  font-family: "Poppins";
+  color: #fff;
+  font-size: 1.3rem;
 }/*# sourceMappingURL=main.css.map */
